#9 Enhance: 메서드 분리